# skynote

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: index.ts
src/common/: index.ts
src/components/: RightMenu.vue
src/router/: index.ts
src/store/: index.ts
src/views/home/: Home.vue
src/views/netspeed/: NetSpeed.vue
src/views/note/: Note.vue
src/views/wallpaper/: Wallpaper.vue
src/views/weather/: Weather.vue
